--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Mi primer TP html</title>
 		<link rel="stylesheet" type="text/css" href="css\reset.css">
 		<link rel="stylesheet" type="text/css" href="css\style.css">	
-		<link href="<link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 	</head>
 	<body>		
 		<nav>
@@ -21,61 +21,70 @@
 		</nav>
 		<header>	
 			<div class="banner">
+				<span class="text_encima1">regular updates</span>
+				<span class="text_encima2">Curabitur ultricies elementum mauris eu dapibus dui alquet mauris euismod neque molestie</span>
 				<img src="css\imagen\banner1.jpg">
 			</div>
 			<form class="buscador">
 				 <input type="text" placeholder="Enter you domain name and hit enter">
-				<button type="submit" class="boton1">SEARCH</button>
+				 <button type="submit" class="boton1" src="ion-search">SEARCH</button>
 			</form>				
 		</header>
 		<section class="interes">
 			<div class="contenedor">
-				<article>
-					<div class="iconos">
-						<img src="css\imagen\wid1.png">
-						<h6>SPEED SERVERS</h6>
-						<p>Mauris vehicula felis vulputate velil semper, nec mellis nisi aliquam</p>
-					</div>
-				</article>
-
-				<article>
-					<div class="iconos">
-						<img src="css\imagen\wid2.png">
-						<h6>HOSTRO SERVICES</h6>
-						<p>Mauris vehicula felis vulputate velil semper, nec mellis nisi aliquam</p>
-					</div>
-				</article>
-
-				<article>
-					<div class="iconos">
-						<img src="css\imagen\wid3.png">
-						<h6>LIVE SUPPORT</h6>
-						<p>Mauris vehicula felis vulputate velil semper, nec mellis nisi aliquam</p>
-					</div>
-				</article>
-
-				<article>
-					<div class="iconos">
-						<img src="css\imagen\wid4.png">
-						<h6>GET DOMAIN NAME</h6>
-						<p>Mauris vehicula felis vulputate velil semper, nec mellis nisi aliquam</p>
-					</div>
-				</article>
+				<table>
+					<tr>
+						<td>
+							<div class="iconos">
+							<img src="css\imagen\wid1.png">
+							<h6>speed servers</h6>
+							<p>Nunc lacinia ron diarn eget efficitur curabitur tristiq diam.</p>
+							</div>							
+						</td>
+						<td><span><img src="css\imagen\threedot.png"></span></td>
+						<td>							
+							<div class="iconos">
+								<img src="css\imagen\wid2.png">
+								<h6>hostro services</h6>
+								<p>Nunc lacinia ron diarn eget efficitur curabitur tristiq diam.</p>
+							</div>							
+						</td>
+						<td><span><img src="css\imagen\threedot.png"></span></td>
+						<td>							
+							<div class="iconos">
+								<img src="css\imagen\wid3.png">
+								<h6>live support</h6>
+								<p>Nunc lacinia ron diarn eget efficitur curabitur tristiq diam.</p>
+							</div>							
+						</td>
+						<td><span><img src="css\imagen\threedot.png"></span></td>
+						<td>							
+							<div class="iconos">
+								<img src="css\imagen\wid4.png">
+								<h6>get domain name</h6>
+								<p>Nunc lacinia ron diarn eget efficitur curabitur tristiq diam.</p>
+							</div>							
+						</td>
+					</tr>
+				</table>
 			</div>
 		</section>
 		<section class="interes2">
 			<div class="contenedor">
-				<h2>Hostro Services</h2>
+				<span><img src="css\imagen\threedot.png"></span>
+				<h2>hostro services</h2>
 				<p>Duis egestas nibh at ex omare officitur fusce ullamcorper turpis eu lectus</p>
 				<div class="lista1">
 					<ul>
 						<li>							
 							<table>
 								<tr>										
-									<th>
-										<h4>RETINA READY</h4>
-										<p>Cras tempus orci massa, id hendrerit mi egestas vitae class aptent taciti.</p>
-									</th>
+									<td>
+										<div class="tabla1">
+											<h4>RETINA READY</h4>
+											<p>Cras tempus orci massa, id hendrerit mi egestas vitae class aptent taciti.</p>
+										</div>
+									</td>
 									<th><img src="css\imagen\ser1.png"></th>
 								</tr>
 							</table>
@@ -85,8 +94,10 @@
 							<table>
 								<tr>
 									<th>
-										<h4>EASY CUSTOMIZE</h4>
-										<p>Cras tempus orci massa, id hendrerit mi egestas vitae class aptent taciti.</p>
+										<div class="tabla1">
+											<h4>EASY CUSTOMIZE</h4>
+											<p>Cras tempus orci massa, id hendrerit mi egestas vitae class aptent taciti.</p>
+										</div>
 									</th>
 									<th><img src="css\imagen\ser2.png"></th>
 								</tr>
@@ -97,8 +108,10 @@
 							<table>
 								<tr>										
 									<th>
-										<h4>PIXEL PERFECT</h4>
-										<p>Cras tempus orci massa, id hendrerit mi egestas vitae class aptent taciti.</p>
+										<div class="tabla1">
+											<h4>PIXEL PERFECT</h4>
+											<p>Cras tempus orci massa, id hendrerit mi egestas vitae class aptent taciti.</p>
+										</div>
 									</th>
 									<th><img src="css\imagen\ser3.png"></th>
 								</tr>
@@ -116,8 +129,10 @@
 								<tr>
 									<th><img src="css\imagen\ser4.png"></th>
 									<th>
-										<h4>UNLIMITED COLORS</h4>
-										<p>Cras tempus orci massa, id hendrerit mi egestas vitae class aptent taciti.</p>
+										<div class="tabla2">
+											<h4>UNLIMITED COLORS</h4>
+											<p>Cras tempus orci massa, id hendrerit mi egestas vitae class aptent taciti.</p>
+										</div>
 									</th>
 								</tr>
 							</table>							
@@ -127,8 +142,10 @@
 								<tr>
 									<th><img src="css\imagen\ser5.png"></th>
 									<th>
-										<h4>FEATURES</h4>
-										<p>Cras tempus orci massa, id hendrerit mi egestas vitae class aptent taciti.</p>
+										<div class="tabla2">
+											<h4>FEATURES</h4>
+											<p>Cras tempus orci massa, id hendrerit mi egestas vitae class aptent taciti.</p>
+										</div>
 									</th>
 								</tr>
 							</table>							
@@ -138,12 +155,13 @@
 								<tr>
 									<th><img src="css\imagen\ser6.png"></th>
 									<th>
-										<h4>SUPPORT TODAY</h4>
-										<p>Cras tempus orci massa, id hendrerit mi egestas vitae class aptent taciti.</p>
+										<div class="tabla2">
+											<h4>SUPPORT TODAY</h4>
+											<p>Cras tempus orci massa, id hendrerit mi egestas vitae class aptent taciti.</p>
+										</div>
 									</th>	
 								</tr>
-							</table>
-							
+							</table>							
 						</li>
 					</ul>
 				</div>	
@@ -151,12 +169,13 @@
 		</section>		
 		<section class="interes3">			
 			<div class="banner2">
-				<img src="css\imagen\pricing-bg.jpg" alt="Mi titulo de la imagen">
-				<h2><span>Pricing Tables</span></h2><br>
-				<p><span>Duis egestas nibh at ex ornare efficitur fusce ullamcorper turpis eu lectus</span></p>					
+				<span class="text_encima3"><img src="css\imagen\threedot.png"></span>
+				<span class="text_encima4">Pricing Tables</span>
+				<span class="text_encima5">Duis egestas nibh at ex ornare efficitur fusce ullamcorper turpis eu lectus</span>
+				<img src="css\imagen\pricing-bg.jpg">					
 			</div>	
 			<div class="contenedor">
-				<ul class="paquete">
+				<ul class="combo">
 					<li>
 						<article>
 							<h3>SMALL PACKAGE</h3>
@@ -185,28 +204,28 @@
 					</li>
 					<li>		
 						<article>
-							<h3>NORMAL PACKAGE</h3>
-							<h4>$<span>49</span>.99</h4>
-							<p>/mouth</p>
-							<table class="precio2">
-								<tr>
-								  <td>Hard drive, GB</td>
-								  <td>5</td>							 
-								</tr>
-								<tr>
-								  <td>Transfer,GB</td>
-								  <td>2</td>							 
-								</tr>
-								<tr>
-								  <td>Data Bases</td>
-								  <td>2</td>							 
-								</tr>
-								<tr>
-								  <td>Dashboards</td>
-								  <td>2</td>							 
-								</tr>
-							</table>
-							<button class="boton2">SELECT PLAN</button>	
+								<h3>NORMAL PACKAGE</h3>
+								<h4>$<span>49</span>.99</h4>
+								<p>/mouth</p>
+								<table class="precio2">
+									<tr>
+									  <td>Hard drive, GB</td>
+									  <td>5</td>							 
+									</tr>
+									<tr>
+									  <td>Transfer,GB</td>
+									  <td>2</td>							 
+									</tr>
+									<tr>
+									  <td>Data Bases</td>
+									  <td>2</td>							 
+									</tr>
+									<tr>
+									  <td>Dashboards</td>
+									  <td>2</td>							 
+									</tr>
+								</table>
+								<button class="boton2">SELECT PLAN</button>	
 						</article>
 					</li>
 					<li>
