--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="contenedor">
 				<div class="menu">
 					<div class="logo">
-						<img class="logo"src="css\imagen\logo1.png">
+						<img src="css\imagen\logo1.png">
 					</div>
 					<ul class="menu-izquierda">
 						<li><a href="home.html">HOME</a></li>
@@ -22,9 +22,11 @@
 			</div>								
 		</nav>
 		<header>	
-			<div class="banner">				
+			<div class="banner">
+				<div class="contenedor">				
 					<span class="text_encima1">regular updates</span>
-					<span class="text_encima2">Curabitur ultricies elementum mauris eu dapibus dui alquet mauris euismod neque molestie</span>		
+					<span class="text_encima2">Curabitur ultricies elementum mauris eu dapibus dui alquet mauris euismod neque molestie</span>
+				</div>	
 				<img src="css\imagen\banner1.jpg">
 			</div>
 			<ul class="buscador">
