--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 						<img src="css\imagen\logo1.png">
 					</div>
 					<ul class="menu-izquierda">
-						<li><a href="home.html">HOME</a></li>
-	            		<li><a href="contact.html">CONTACT</a></li>    	
+						<li><a href="index.html">HOME</a></li>
+	            		<li><a href="contacto.html">CONTACT</a></li>    	
 					</ul>	
 				</div>				
 			</div>								
@@ -296,13 +296,13 @@
 			<section class="relleno">			
 				<h3>Hosting use <span>500,000</span> happy customers. Want to see services?</h3>		
 			</section>			
-		<footer>
+		<footer class="pie">
 			<div class="contenedor">					
 				<p>© Hostro All right reserved</p>
 				<div class="almenu">	
 					<ul>
-						<li><a href="home">Home</a></li>
-						<li><a href="contact">Contact</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="contacto.html">Contact</a></li>
 						<li><a href="up" class="ion-chevron-up"></a></li>	
 					</ul>
 				</div>
