--- a/contacto.html
+++ b/contacto.html
@@ -7,14 +7,14 @@
 	<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">	
 </head>
 <body>
-	<nav>
+	<nav class="navegador">
 		<div class="contenedor">
 			<div class="menu">
 				<div class="logo">
 					<img class="logo"src="css\imagen\logo1.png">
 				</div>
 				<ul class="menu-izquierda">
-					<li><a href="home.html">HOME</a></li>
+					<li><a href="index.html">HOME</a></li>
             		<li><a href="contact.html">CONTACT</a></li>    	
 				</ul>	
 			</div>				
@@ -57,7 +57,9 @@
 						<br/>
 					</div>
 				</div>
-				<button class="boton">submit</button>	
+				<div>
+					<button class="boton">submit</button>
+				</div>	
 			</div>
 		</div>
 	</section>
@@ -65,13 +67,13 @@
 			<section class="relleno">			
 				<h3>Hosting use <span>500,000</span> happy customers. Want to see services?</h3>		
 			</section>	
-	<footer>
+	<footer class="pie">
 		<div class="contenedor">					
 			<p>© Hostro All right reserved</p>
 			<div class="almenu">	
 				<ul>
-					<li><a href="home">Home</a></li>
-					<li><a href="contact">Contact</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="contacto.html">Contact</a></li>
 					<li><a href="up" class="ion-chevron-up"></a></li>	
 				</ul>
 			</div>
